<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="250dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:gravity="center"
              android:orientation="vertical"
              android:layout_marginTop="16dp"
    >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name_hint"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:drawablePadding="8dp"
        />
    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:drawableRight="@drawable/ic_action_accept"
        />
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:drawableRight="@drawable/ic_action_accept"
        android:onClick="movetoSignInView"
        />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        />

</LinearLayout>