<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    tools:context=".signin.SignInActivity">
    >

    <EditText
        android:id="@+id/sign_in_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name_hint"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        />
    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name_hint"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:drawablePadding="8dp"
        />

    <EditText
        android:id="@+id/retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:drawablePadding="8dp"
        />

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:drawableRight="@drawable/ic_action_accept"
        android:onClick="createLogin"
        />
</LinearLayout>
